tests/gen-derivation/derivation/core/trivial 002-neg/expected
1/2: Building RunDerivedGen (RunDerivedGen.idr)
2/2: Building DerivedGen (DerivedGen.idr)
Error: While processing right hand side of checkedGen. Error during reflection: No constructors found for the type `Builtin.Void`

DerivedGen:12:14--12:23
 08 | 
 09 | %language ElabReflection
 10 | 
 11 | checkedGen : Fuel -> Gen Void
 12 | checkedGen = deriveGen
                   ^^^^^^^^^

